feat: upload chunk with secret
