# internal/storage/handler/handler.go
@@ -11,7 +11,6 @@ import (
 	"medioa/internal/storage/usecase"
 	commonModel "medioa/models"
 	"medioa/pkg/xhttp"
-	"medioa/pkg/xtype"
 
 	"github.com/gin-gonic/gin"
 )
@@ -36,6 +35,8 @@ func (h Handler) MapRoutes(group *gin.RouterGroup) {
 	group.POST(constants.STORAGE_ENDPOINT_UPLOAD_COMMIT, h.CommitChunk)
 	group.GET(constants.STORAGE_ENDPOINT_DOWNLOAD, h.Download)
 	group.POST(constants.STORAGE_ENDPOINT_UPLOAD_WITH_SECRET, h.UploadWithSecret)
+	group.POST(constants.STORAGE_ENDPOINT_UPLOAD_STAGE_WITH_SECRET, h.UploadChunkWithSecret)
+	group.POST(constants.STORAGE_ENDPOINT_UPLOAD_COMMIT_WITH_SECRET, h.CommitChunkWithSecret)
 	group.GET(constants.STORAGE_ENDPOINT_DOWNLOAD_WITH_SECRET, h.DownloadWithSecret)
 	group.POST(constants.STORAGE_ENDPOINT_CREATE_SECRET, h.CreateSecret)
 	group.PUT(constants.STORAGE_ENDPOINT_RETRIEVE_SECRET, h.RetrieveSecret)
@@ -73,7 +74,7 @@ func (h Handler) Upload(ctx *gin.Context) {
 	userId := int64(1)
 	res, err := h.usecase.Upload(ctx, userId, &models.UploadFileRequest{
 		SessionId: id,
-		File:      xtype.NewFile(file),
+		File:      file,
 		FileName:  fileName,
 	})
 	if err != nil {
@@ -136,7 +137,7 @@ func (h Handler) UploadChunk(ctx *gin.Context) {
 		SessionId:   id,
 		FileId:      fileId,
 		FileName:    fileName,
-		Chunk:       xtype.NewFile(chunk),
+		Chunk:       chunk,
 		ChunkIndex:  chunkIndex,
 		TotalChunks: totalChunks,
 	})
@@ -217,7 +218,7 @@ func (h Handler) Download(ctx *gin.Context) {
 //	@Produce		json
 //	@Param			id			query		string	false	"session id"
 //	@Param			secret		query		string	true	"secret"
-//	@Param			chunk		formData	file	true	"binary file"
+//	@Param			file		formData	file	true	"binary file"
 //	@Param			file_name	formData	string	false	"file name"
 //	@Success		201			{object}	models.UploadResponse
 //	@Router			/storage/secret/upload [post]
@@ -225,7 +226,7 @@ func (h Handler) UploadWithSecret(ctx *gin.Context) {
 	id := ctx.Query("id")
 	secret := ctx.Query("secret")
 	fileName := ctx.PostForm("file_name")
-	file, err := ctx.FormFile("chunk")
+	file, err := ctx.FormFile("file")
 	if err != nil {
 		xhttp.BadRequest(ctx, err)
 		return
@@ -235,9 +236,110 @@ func (h Handler) UploadWithSecret(ctx *gin.Context) {
 	res, err := h.usecase.UploadWithSecret(ctx, userId, &models.UploadWithSecretRequest{
 		SessionId: id,
 		Secret:    secret,
-		File:      xtype.NewFile(file),
+		File:      file,
 		FileName:  fileName,
 	})
+	if err != nil {
+		xhttp.BadRequest(ctx, err)
+		return
+	}
+
+	xhttp.Created(ctx, res)
+}
+
+// UploadChunkWithSecret godoc
+//
+//	@Security		ApiKeyAuth
+//	@Summary		Upload media by chunk with secret
+//	@Description	Upload media file (images, videos, etc.)
+//	@Tags			Storage
+//	@Accept			mpfd
+//	@Produce		json
+//	@Param			id				query		string	false	"session id"
+//	@Param			secret			query		string	true	"secret"
+//	@Param			chunk			formData	file	true	"binary chunk"
+//	@Param			chunk_index		formData	int64	true	"chunk index"
+//	@Param			total_chunks	formData	int64	true	"total chunk"
+//	@Param			file_id			formData	string	false	"file id"
+//	@Param			file_name		formData	string	false	"file name"
+//	@Success		201				{object}	models.UploadChunkResponse
+//	@Router			/storage/secret/upload/stage [post]
+func (h Handler) UploadChunkWithSecret(ctx *gin.Context) {
+	maxSize := h.cfg.Upload.MaxSizeMB
+	ctx.Request.Body = http.MaxBytesReader(ctx.Writer, ctx.Request.Body, maxSize<<20)
+
+	id := ctx.Query("id")
+	secret := ctx.Query("secret")
+	fileId := ctx.PostForm("file_id")
+	fileName := ctx.PostForm("file_name")
+	chunk, err := ctx.FormFile("chunk")
+	if err != nil {
+		if err.Error() == "multipart: NextPart: http: request body too large" {
+			xhttp.BadRequest(ctx, fmt.Errorf("chunk size too large (max: %dMB)", maxSize))
+		} else {
+			xhttp.BadRequest(ctx, err)
+		}
+		return
+	}
+
+	chunkIndexStr := ctx.PostForm("chunk_index")
+	chunkIndex, err := strconv.ParseInt(chunkIndexStr, 10, 64)
+	if err != nil {
+		xhttp.BadRequest(ctx, fmt.Errorf("invalid chunk index"))
+		return
+	}
+
+	totalChunkStr := ctx.PostForm("total_chunks")
+	totalChunks, err := strconv.ParseInt(totalChunkStr, 10, 64)
+	if err != nil {
+		xhttp.BadRequest(ctx, fmt.Errorf("invalid total chunk"))
+		return
+	}
+
+	userId := int64(1)
+	res, err := h.usecase.UploadChunkWithSecret(ctx, userId, &models.UploadChunkWithSecretRequest{
+		SessionId:   id,
+		Secret:      secret,
+		FileId:      fileId,
+		FileName:    fileName,
+		Chunk:       chunk,
+		ChunkIndex:  chunkIndex,
+		TotalChunks: totalChunks,
+	})
+	if err != nil {
+		xhttp.BadRequest(ctx, err)
+		return
+	}
+
+	xhttp.Created(ctx, res)
+}
+
+// CommitChunkWithSecret godoc
+//
+//	@Security		ApiKeyAuth
+//	@Summary		Commit upload media chunk with secret
+//	@Description	Commit all chunks to complete upload media file
+//	@Tags			Storage
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		query		string						false	"session id"
+//	@Param			secret	query		string						true	"secret"
+//	@Param			body	body		models.CommitChunkRequest	true	"commit chunk request"
+//	@Success		200		{object}	models.CommitChunkResponse
+//	@Router			/storage/upload/commit [post]
+func (h Handler) CommitChunkWithSecret(ctx *gin.Context) {
+	id := ctx.Query("id")
+	secret := ctx.Query("secret")
+	req := &models.CommitChunkRequest{}
+	if err := ctx.ShouldBindJSON(req); err != nil {
+		xhttp.BadRequest(ctx, err)
+		return
+	}
+	req.SessionId = id
+	req.Secret = secret
+
+	userId := int64(1)
+	res, err := h.usecase.CommitChunkWithSecret(ctx, userId, req)
 	if err != nil {
 		xhttp.BadRequest(ctx, err)
 		return
